--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           python3 <<'EOF'
           import sys
+          import os
           import re
           from bs4 import BeautifulSoup
   
