--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,10 +15,10 @@ jobs:
       - name: 📥 Check out PR branch
         uses: actions/checkout@v3
 
-      - name: 🔐 Load validation hashes
-        run: |
-          mkdir -p scripts
-          echo "${{ secrets.HASHES_JSON }}" | base64 -d > scripts/hashes.json
+#      - name: 🔐 Load validation hashes
+#        run: |
+#          mkdir -p scripts
+#          echo "${{ secrets.HASHES_JSON }}" | base64 -d > scripts/hashes.json
 
       - name: 🧪 Install Python dependencies
         run: pip install beautifulsoup4 lxml
