go back to secret

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -92,5 +92,5 @@ jobs:
             -f name='WINNER_LOCKED' \
             -f value='true'
         env:
-#          GH_TOKEN: ${{ secrets.PAT_FOR_ENV_UPDATE }}
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.PAT_FOR_ENV_UPDATE }}
+#          GH_TOKEN: ${{ github.token }}
